# dc3-package

./: .gitignore  README.md  coherence_new.txt  coherence_rodrigo.txt  constants.py  dc3.py  pyproject.toml  res.npy  res_2.npy
01_synthetic/: cubic.py  gen.py  test.py  tsne.py  vis.py
01_synthetic/lammps_lattices/: bcc.lmp  fcc.lmp  log.lammps  run.sh
02_features/: compute-all.py  rsf.py  sop.py
benchmarking/: al.py  heuristics.py  run.py  run_benchmark.py  vis_accuracies.py  vis_performance.py  vis_performance_combined.py
benchmarking/accuracies/: al_fcc.csv  ge_cd.csv  li_bcc.csv  ti_hcp.csv
benchmarking/old (dont use)/: res.npy  run.py  run_perfect_test.py  vis_performance.py  vis_performance_combined.py
features/: compute_all.py  rsf.py  sop.py
lattice/: gen.py  perfect_features.py  test.py  tsne.py
lattice/lammps_lattices/: bcc.lmp  cd.lmp  hd.lmp  log.lammps  run.sh  slurm-62986517.out  slurm-62986573.out  slurm-63204345.out  slurm-63204549.out
md/: .generate_all_lammps.py.swp  Ar.in  compute_all_features.py  experiments_list.json  generate_all_lammps.py  generate_lammps_input.py  lammps_writer.py  run_jobs.py
md/potentials/: al_eam.fs  si.edip
ml/: model.py  train.py
ml/models/: means.txt  stds.txt
ml/statistics/: loss_2025-02-16_14-18-41.csv  loss_2025-02-16_14-19-05.csv  loss_2025-02-16_14-24-46.csv  loss_2025-02-16_14-25-34.csv  loss_2025-02-16_14-27-05.csv  loss_2025-02-16_14-29-55.csv  loss_2025-02-16_14-30-48.csv  loss_2025-02-16_14-32-12.csv  loss_2025-02-18_12-28-03.csv  loss_2025-02-18_12-29-36.csv  loss_2025-02-18_12-31-15.csv  (+8 more)
ml_dataset/: batch_run_lattices.py  batch_run_lattices.sh  create_h5.py  data_gen.py  data_gen_single.py  dataset.py  multiprocess_lattices.py  run_tsne.sh  single_lattice.sh  tsne_features.py  tsne_prototype.py
outlier/: coh.py  coherence.py  detection_model.py  outlier_cutoffs.py  synthetic_features.py
src/: __init__.py  constants.py  dc3.py
src/DC3/: ___init__.py  (+5 more)
(+387 files in other folders)
