[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DC3"
version = "1.0"
description = "DC3 structure classification package for OVITO"
keywords = ["ovito", "dc3", "structure classification"]
authors = [{name = "Jieruei Chang", email = "jieruei@mit.edu"}, {name = "Alex Liang", email = "acliang@mit.edu"}]
maintainers = [{name = "Jieruei Chang", email = "jieruei@mit.edu"}, {name = "Alex Liang", email = "acliang@mit.edu"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
   "ovito >= 3.9.1",
   "numpy >= 1.21.0"
]

[project.urls]
repository = "https://github.com/DC3-Freitas/dc3-package"

[tool.setuptools.packages.find]
where = ["src"]