[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DC3"
version = "1.0"
description = "DC3 structure classification package for OVITO"
keywords = ["ovito", "dc3", "structure classification"]
authors = [{name = "Jieruei Chang", email = "jieruei@mit.edu"}, {name = "Alexander Liang", email = "acliang@mit.edu"}]
maintainers = [{name = "Jieruei Chang", email = "jieruei@mit.edu"}, {name = "Alexander Liang", email = "acliang@mit.edu"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
   "ovito >= 3.9.1",
   "numpy >= 1.23.0",
   "numba",
   "torch >= 2.5.1",
   "tqdm >= 4.67.0",
   "pandas >= 2.2.3",
   "scipy >= 0.16.0"
]

[project.urls]
repository = "https://github.com/DC3-Freitas/dc3-package"

[tool.setuptools]
# enable package discovery under src/
packages = { find = {} }

[tool.setuptools.packages.find]
where   = ["src"]
include = ["DC3*"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.entry-points.'OVITO.Modifier']
"DC3 Classification" = "DC3:DC3Modifier"